cli/tests/snapshots/help__help_scrub_start.snap
---
source: cli/tests/help.rs
expression: "help(&[\"scrub\", \"start\"])"
---
Start a new scrub on the filesystem or a device.

Scrubs all devices sequentially. This command blocks until the scrub completes; use Ctrl-C to
cancel.

Usage: start [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem or a device

Options:
  -r, --readonly
          Read-only mode: check for errors but do not attempt repairs

  -h, --help
          Print help (see a summary with '-h')
