cli/tests/snapshots/help__help_scrub_status.snap
---
source: cli/tests/help.rs
expression: "help(&[\"scrub\", \"status\"])"
---
Show the status of a running or finished scrub

Usage: status [OPTIONS] <PATH>

Arguments:
  <PATH>
          Path to a mounted btrfs filesystem or a device

Options:
  -d, --device
          Show stats per device

  -h, --help
          Print help
