cli/tests/snapshots/help__help_subvolume_create.snap
---
source: cli/tests/help.rs
expression: "help(&[\"subvolume\", \"create\"])"
---
Create a new subvolume at each given path.

The parent directory must already exist and be on a btrfs filesystem (unless -p is given). Requires
CAP_SYS_ADMIN.

Usage: create [OPTIONS] <PATHS>...

Arguments:
  <PATHS>...
          

Options:
  -i <QGROUPID>
          Add the newly created subvolume to a qgroup (can be given multiple times)

  -p, --parents
          Create any missing parent directories (like mkdir -p)

  -h, --help
          Print help (see a summary with '-h')
